--- a/lesson1/basics.ipynb
+++ b/lesson1/basics.ipynb
@@ -460,21 +460,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Счастливый\n",
+      "0 9 0 2 3 4\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "a = int(input())\n",
+    "b = int(a / 100000 )\n",
+    "c = int((a / 10000) % 10)\n",
+    "d = int((a / 1000) % 10)\n",
+    "e = int((a / 100) % 10)\n",
+    "f = int((a / 10) % 10)\n",
+    "g = int(a % 10)\n",
+    "if (d + b + c) == (e + f + g):\n",
+    "    print(\"Счастливый\")\n",
+    "else:\n",
+    "    print(\"Обычный\")\n",
+    "print(b, c, d, e, f, g)"
+   ]
   },
   {
    "cell_type": "code",
