--- a/lesson1/basics.ipynb
+++ b/lesson1/basics.ipynb
@@ -489,6 +489,192 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i <= 10:\n",
+    "    i = i + 1\n",
+    "    if i > 7:\n",
+    "        i = i + 2\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "b = 0\n",
+    "while a == 0:\n",
+    "    b += a\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "b = 0\n",
+    "while a != 0:\n",
+    "    b += a\n",
+    "    a = int(input())\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "c = 1\n",
+    "while a % c == 0 and b % c == 0:\n",
+    "    c += 1\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "c = 1\n",
+    "while c % a == 0:\n",
+    "    print(c % a)\n",
+    "    c += 1\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "c = 1\n",
+    "while c % a != 0 or c % b != 0:\n",
+    "    c += 1\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "\n",
+    "while a:\n",
+    "    if a < 10:\n",
+    "        a = int(input())\n",
+    "        continue\n",
+    "    if a > 100:\n",
+    "        break\n",
+    "    else:\n",
+    "        print(a)\n",
+    "        a = int(input())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2341 4\n",
+      "2342 8\n",
+      "2343 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "c = int(input())\n",
+    "d = int(input())\n",
+    "\n",
+    "for i in range(a, b+1):\n",
+    "    for g in range(c, d+1):\n",
+    "        print(g, end=\"\")\n",
+    "    print(i, i * g)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
